# TradingAgents-OpenClaw

./: .gitignore  AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  PROJECT.md  README.md  SKILLS.md  SOUL.md  TOOLS.md  USER.md  bootstrap.py  cli.py  integration_analysis.md  master_agent  pyproject.toml  requirements.txt  setup.py  test_final.py  test_phase1.py  test_phase2.py  test_phase3.py
docs/: architecture.md
docs/phase4/: PHASE_4B_CRYPTO_TRADER.md  PHASE_4C_WEIBO_TRENDING.md  PHASE_4D_CRYPTO_DATA.md  PROJECT_PLAN.md
master-agent/: feishu_adapter.py  orchestrator.py  orchestrator_full.py  orchestrator_phase3.py  portfolio_manager.py  trader_debate_orchestrator.py
shared/: __init__.py  config.py  interfaces.py  json_utils.py  llm_client.py  logging_config.py  models.py  skill_importer.py  state_machine.py
skills/crypto_trader/: SKILL.md
skills/crypto_trader/tests/: __init__.py
skills/skill-tao-data/: __init__.py
skills/skill-tao-data/vendors/: alpha_vantage_client.py
skills/skill-tao-fundamental/: SKILL.md  fundamental_analyst.py
skills/skill-tao-research-manager/: SKILL.md  research_manager.py
skills/skill-tao-researcher-bear/: SKILL.md  researcher_bear.py
skills/skill-tao-researcher-bull/: researcher_bull.py
skills/skill-tao-risk-manager/: risk_manager.py
skills/skill-tao-sentiment/: SKILL.md  sentiment_analyst.py
skills/skill-tao-technical/: SKILL.md  technical_analyst.py
skills/skill-tao-trader/: traders.py
skills/skill-tao-trader-bear/: SKILL.md
skills/skill-tao-trader-bull/: SKILL.md
skills/skill-tao-trader-neutral/: SKILL.md
skills/skill_tao_data/: SKILL.md  __init__.py  data_provider.py
skills/skill_tao_data/vendors/: __init__.py  alpha_vantage_client.py  base.py  china_social_client.py  china_stock_client.py  crypto_client.py  finnhub_client.py  sina_stock_client.py  tushare_client.py  yfinance_client.py
skills/skill_tao_fundamental/: __init__.py  fundamental_analyst.py
skills/skill_tao_research_manager/: SKILL.md  __init__.py  research_manager.py
skills/skill_tao_researcher_bear/: SKILL.md  __init__.py  researcher_bear.py
skills/skill_tao_researcher_bull/: SKILL.md  __init__.py  researcher_bull.py
skills/skill_tao_risk_manager/: SKILL.md  __init__.py  risk_manager.py
skills/skill_tao_sentiment/: SKILL.md  __init__.py  sentiment_analyst.py
skills/skill_tao_technical/: SKILL.md  __init__.py  technical_analyst.py
skills/skill_tao_trader/: SKILL.md  __init__.py  traders.py
skills/skill_tao_trader_bear/: SKILL.md  __init__.py
skills/skill_tao_trader_bull/: SKILL.md  __init__.py
skills/skill_tao_trader_neutral/: SKILL.md  __init__.py
skills/skill_tao_trading/: SKILL.md  __init__.py
tests/: __init__.py  test_cache_manager.py  test_json_utils.py  test_state_machine.py
